--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -9,7 +9,9 @@
     display: flex;
     justify-content: center;
 }
-
+.java-settings {
+    color:white
+}
 .tab-btn-css {
     border-radius: 23px;
     width: 160px;
